Rename combinedPlacementAnalysis and add getProhibitingRules